# Arduino-FOC

./: CMakeLists.txt
src/current_sense/: InlineCurrentSense.cpp
src/current_sense/hardware_specific/: esp32_adc_driver.cpp  esp32_adc_driver.h  esp32_mcu.cpp
src/drivers/hardware_specific/: esp32_mcu.cpp
src/sensors/: MagneticSensorSPI.cpp
